[package]
name = "asc-crash-fetcher"
version = "0.2.0"
edition = "2021"
description = "Manage TestFlight crash feedback from App Store Connect API"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
shellexpand = "3"
dirs = "6"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
